Update the beginning of the intro

--- a/initial_research/sections/intro.tex
+++ b/initial_research/sections/intro.tex
@@ -2,14 +2,19 @@
 
 \label{intro}
 
-To start on this long way we will focus on the principal key words of this Thesis.
+This document is a draft about the storm of concepts against which I am colliding.
+The aim is to organize them a little before writing the actual thesis document as a preliminary exercise.
 
 \vspace{5 mm}
 
-\noindent These are: 
+\noindent The thesis deadline is October 2028.
+
+\vspace{5 mm}
+
+\noindent To begin this long way, we will focus on the key concepts of this thesis, which currently include:
 
 \begin{itemize}
-\item White Rabbit Project
+\item White Rabbit Project. Some related concepts are:
 \begin{itemize}
 \item Synchronous Ethernet (SyncE) 
 \item FPGA Mezzanine Card (FMC)/ Simple PCIe FMC Carrier (SPEC)
