--- a/initial_research/sections/wrpc.tex
+++ b/initial_research/sections/wrpc.tex
@@ -266,8 +266,8 @@ I've successfully simulated WRPC \cite{WRPC:ohwr} in its \say{v4.2} version for 
 \begin{figure}[H]
     \centering
     \includegraphics[width=26cm]{figures/wrpc-sources-diagram.pdf}
-    \captionsetup{name=\hspace{10cm}Figure,format=plain,justification=centering,width=20cm}
-    \caption{Block diagram of WRPC v4.2 for Spartan6.}
+    \captionsetup{name=\hspace{8.5cm}Figure,format=plain,justification=centering,width=20cm}
+    \caption{Block diagram of WRPC v4.2 sources for Spartan6.}
     \label{fig:dig}
 \end{figure}
 \restoregeometry
