Update initial_research doc
Adding info related to WRPC v4.2 simulation through CI

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -186,3 +186,12 @@
   journal = {GitHub repository},
   howpublished = {\href{https://github.com/ghdl/ghdl}{gh:ghdl/ghdl}},
 }
+
+@misc{hdl-make:ohwr,
+  author = {{CERN}},
+  title = {{Hdlmake}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/projects/hdl-make}{ohwr.org/projects/hdl-make}}
+}
