Add Contributions section

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -195,3 +195,12 @@
   journal = {GitLab Group},
   howpublished = {\href{https://ohwr.org/projects/hdl-make}{ohwr.org/projects/hdl-make}}
 }
+
+@misc{ohwr,
+  author = {{CERN}},
+  title = {{Open Hardware Repository}},
+  year = {2024},
+  publisher = {GitLab},
+  journal = {GitLab Group},
+  howpublished = {\href{https://ohwr.org/explore}{ohwr.org/explore}}
+}
