--- a/initial_research/main.tex
+++ b/initial_research/main.tex
@@ -107,6 +107,8 @@ rightmargin=25pt
 \input{sections/wrn}
 \input{sections/wrpc}
 \input{sections/asic}
+\newpage 
+\input{sections/contrib}
 
 \clearpage % If you want the references in a separate page
 \bibliography{bibliography}
