Update initial research doc links

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -47,7 +47,7 @@
   year = {2011},
   publisher = {CERN},
   journal = {Online Poster},
-  howpublished = {\href{https://ohwr.org/project/white-rabbit/uploads/ff98688542afbe36e9f11877ba4c5f1a/ICALEPCS2011_poster.pdf}{ohwr.org/project/white-rabbit/posters/WR\_Maciej\_ICALEPCS2011/WR\_poster\_A0\_final.pdf}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/white-rabbit/-/wikis/uploads/ff98688542afbe36e9f11877ba4c5f1a/ICALEPCS2011_poster.pdf}{gitlab.com/ohwr/project/white-rabbit/posters/WR\_Maciej\_ICALEPCS2011/WR\_poster\_A0\_final.pdf}}
 }
 
 @misc{gl:chronos,
@@ -65,7 +65,7 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/project/white-rabbit/-/wikis/Node}{ohwr.org/project/white-rabbit/-/wikis/Node}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/white-rabbit/-/wikis/Node}{gitlab.com/ohwr/project/white-rabbit/-/wikis/Node}}
 }
 
 @misc{etherbone-core:ohwr,
@@ -74,7 +74,7 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/project/etherbone-core}{ohwr.org:project/etherbone-core}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/etherbone-core}{gitlab.com/ohwr:project/etherbone-core}}
 }
 
 @misc{etherbone-core:wiki,
@@ -83,7 +83,7 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/project/etherbone-core/-/wikis/home}{ohwr.org/project/etherbone-core/-/wikis/home}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/etherbone-core/-/wikis/home}{gitlab.com/ohwr/project/etherbone-core/-/wikis/home}}
 }
 
 @misc{etherbone-core:spec,
@@ -92,7 +92,7 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/project/etherbone-core/uploads/31c96b68f85d27fd5199dfc6d6443a08/spec.pdf}{ohwr.org/project/etherbone-core/uploads/31c96b68f85d27fd5199dfc6d6443a08/spec.pdf}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/etherbone-core/-/wikis/uploads/31c96b68f85d27fd5199dfc6d6443a08/spec.pdf}{gitlab.com/ohwr/project/etherbone-core/uploads/31c96b68f85d27fd5199dfc6d6443a08/spec.pdf}}
 }
 
 @misc{WR-core:wiki,
@@ -101,7 +101,7 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/project/wr-cores/-/wikis/Wrpc-core}{ohwr.org/project/wr-cores/-/wikis/Wrpc-core}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/wr-cores/-/wikis/Wrpc-core}{gitlab.com/ohwr/project/wr-cores/-/wikis/Wrpc-core}}
 }
 
 @misc{WR-core:manual,
@@ -110,7 +110,7 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/project/wr-cores/-/wikis/uploads/7cf8d2161b6e5fa86348455bbd022196/wrpc-user-manual-v5.0.pdf}{ohwr.org/project/wr-cores/-/wikis/uploads/7cf8d2161b6e5fa86348455bbd022196/wrpc-user-manual-v5.0.pdf}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/wr-cores/-/wikis/uploads/7cf8d2161b6e5fa86348455bbd022196/wrpc-user-manual-v5.0.pdf}{gitlab.com/ohwr/project/wr-cores/-/wikis/uploads/7cf8d2161b6e5fa86348455bbd022196/wrpc-user-manual-v5.0.pdf}}
 }
 
 @misc{WR:ohwr,
@@ -119,7 +119,7 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/project/white-rabbit}{ohwr.org/project/white-rabbit}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/white-rabbit}{gitlab.com/ohwr/project/white-rabbit}}
 }
 
 @misc{WRPC:ohwr,
@@ -128,7 +128,7 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/project/wr-cores}{ohwr.org/project/wr-cores}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/wr-cores}{gitlab.com/ohwr/project/wr-cores}}
 }
 
 @misc{WRPC:modules,
@@ -137,7 +137,7 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/project/wr-cores/-/tree/master/modules}{ohwr.org/project/wr-cores/-/tree/master/modules}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/wr-cores/-/tree/master/modules}{gitlab.com/ohwr/project/wr-cores/-/tree/master/modules}}
 }
 
 @misc{urv-core:ohwr,
@@ -146,7 +146,7 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/project/urv-core/}{ohwr.org/project/urv-core/}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/urv-core/}{gitlab.com/ohwr/project/urv-core/}}
 }
 
 @misc{urv-core:wiki,
@@ -155,7 +155,7 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/project/urv-core/-/wikis/home}{ohwr.org/project/urv-core/-/wikis/home}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/urv-core/-/wikis/home}{gitlab.com/ohwr/project/urv-core/-/wikis/home}}
 }
 
 @article{Włostowski:2213516,
@@ -193,7 +193,7 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/projects/hdl-make}{ohwr.org/projects/hdl-make}}
+  howpublished = {\href{https://gitlab.com/ohwr/project/hdl-make}{gitlab.com/ohwr/project/hdl-make}}
 }
 
 @misc{ohwr,
@@ -202,5 +202,5 @@
   year = {2024},
   publisher = {GitLab},
   journal = {GitLab Group},
-  howpublished = {\href{https://ohwr.org/explore}{ohwr.org/explore}}
+  howpublished = {\href{https://gitlab.com/ohwr}{https://gitlab.com/ohwr}}
 }
