--- a/initial_research/sections/contrib.tex
+++ b/initial_research/sections/contrib.tex
@@ -5,31 +5,31 @@
 
 \vspace{5mm}
 
-\noindent In the \href{https://ohwr.org/project/urv-core}{urv-core} repository (December 19, 2024):
+\noindent In the \href{https://gitlab.com/ohwr/project/urv-core}{urv-core} repository (December 19, 2024):
 
 \begin{itemize}
 \item Three commits:
     \begin{itemize}
-    \item \href{https://ohwr.org/project/urv-core/-/commit/655d46fe9fcb8a0880f63734f613a1f863b340ec}{655d46fe9fcb8a0880f63734f613a1f863b340ec}
-    \item \href{https://ohwr.org/project/urv-core/-/commit/d311497ac22b0164953fc0eb7474a97620c819e2}{d311497ac22b0164953fc0eb7474a97620c819e2}
-    \item \href{https://ohwr.org/project/urv-core/-/commit/46a6842f953cfab5f1814b8f09324b6f739e133f}{46a6842f953cfab5f1814b8f09324b6f739e133f}
+    \item \href{https://gitlab.com/ohwr/project/urv-core/-/commit/655d46fe9fcb8a0880f63734f613a1f863b340ec}{655d46fe9fcb8a0880f63734f613a1f863b340ec}
+    \item \href{https://gitlab.com/ohwr/project/urv-core/-/commit/d311497ac22b0164953fc0eb7474a97620c819e2}{d311497ac22b0164953fc0eb7474a97620c819e2}
+    \item \href{https://gitlab.com/ohwr/project/urv-core/-/commit/46a6842f953cfab5f1814b8f09324b6f739e133f}{46a6842f953cfab5f1814b8f09324b6f739e133f}
     \end{itemize}
 \end{itemize}
 
-\noindent Related issue:
+\noindent Related issue: \footnote{Since the migration from \say{ohwr.org} to \say{gitlab.com}, the authors of the issues created on the old site have been aliased by the person who performed the migration.}
 
 \vspace{5mm}
 
-\href{https://ohwr.org/project/urv-core/-/issues/10}{ohwr.org/project/urv-core/-/issues/10}
+\href{https://gitlab.com/ohwr/project/urv-core/-/issues/10}{gitlab.com/ohwr/project/urv-core/-/issues/10}
 
 \vspace{5mm}
 
-\noindent In the \href{https://ohwr.org/project/general-cores/}{general-cores} repository (February 3, 2025):
+\noindent In the \href{https://gitlab.com/ohwr/project/general-cores/}{general-cores} repository (February 3, 2025):
 
 \begin{itemize}
 \item One commit:
     \begin{itemize}
-    \item \href{https://ohwr.org/project/general-cores/-/commit/4f887ca87620116b199a898599c70c69b0f0b5f0}{4f887ca87620116b199a898599c70c69b0f0b5f0}
+    \item \href{https://gitlab.com/ohwr/project/general-cores/-/commit/4f887ca87620116b199a898599c70c69b0f0b5f0}{4f887ca87620116b199a898599c70c69b0f0b5f0}
     \end{itemize}
 \end{itemize}
 
@@ -37,16 +37,16 @@
 
 \vspace{5mm}
 
-\href{https://ohwr.org/project/general-cores/-/issues/57}{ohwr.org/project/general-cores/-/issues/57}
+\href{https://gitlab.com/ohwr/project/general-cores/-/issues/57}{gitlab.com/ohwr/project/general-cores/-/issues/57}
 
 \vspace{5mm}
 
-\noindent In the \href{https://ohwr.org/project/wr-cores/}{wr-cores} repository (February 13, 2025):
+\noindent In the \href{https://gitlab.com/ohwr/project/wr-cores/}{wr-cores} repository (February 13, 2025):
 
 \begin{itemize}
 \item One commit:
     \begin{itemize}
-    \item \href{https://ohwr.org/project/wr-cores/-/commit/c940635009eff0e417f9b547fbd73396f89e6627}{c940635009eff0e417f9b547fbd73396f89e6627}
+    \item \href{https://gitlab.com/ohwr/project/wr-cores/-/commit/c940635009eff0e417f9b547fbd73396f89e6627}{c940635009eff0e417f9b547fbd73396f89e6627}
     \end{itemize}
 \end{itemize}
 
@@ -54,18 +54,18 @@
 
 \vspace{5mm}
 
-\href{https://ohwr.org/project/wr-cores/-/issues/102}{ohwr.org/project/wr-cores/-/issues/102}
+\href{https://gitlab.com/ohwr/project/wr-cores/-/issues/102}{gitlab.com/ohwr/project/wr-cores/-/issues/102}
 
 \vspace{5mm}
 
-\noindent In the \href{https://ohwr.org/project/gn4124-core/}{gn4124-core} repository (February 14, 2025):
+\noindent In the \href{https://gitlab.com/ohwr/project/gn4124-core/}{gn4124-core} repository (February 14, 2025):
 
 \begin{itemize}
 \item Three commits:
     \begin{itemize}
-    \item \href{https://ohwr.org/project/gn4124-core/-/commit/eef550ec1e227704af35739ff2168e80eda70d75}{eef550ec1e227704af35739ff2168e80eda70d75}
-    \item \href{https://ohwr.org/project/gn4124-core/-/commit/b1fe3889dfffbf3f6b40f8a46886a659de09fbc7}{b1fe3889dfffbf3f6b40f8a46886a659de09fbc7}
-    \item \href{https://ohwr.org/project/gn4124-core/-/commit/71c4d362442ad11ddd2b1fd7fd4d8ab1e1947a89}{71c4d362442ad11ddd2b1fd7fd4d8ab1e1947a89}
+    \item \href{https://gitlab.com/ohwr/project/gn4124-core/-/commit/eef550ec1e227704af35739ff2168e80eda70d75}{eef550ec1e227704af35739ff2168e80eda70d75}
+    \item \href{https://gitlab.com/ohwr/project/gn4124-core/-/commit/b1fe3889dfffbf3f6b40f8a46886a659de09fbc7}{b1fe3889dfffbf3f6b40f8a46886a659de09fbc7}
+    \item \href{https://gitlab.com/ohwr/project/gn4124-core/-/commit/71c4d362442ad11ddd2b1fd7fd4d8ab1e1947a89}{71c4d362442ad11ddd2b1fd7fd4d8ab1e1947a89}
     \end{itemize}
 \end{itemize}
 
@@ -73,4 +73,4 @@
 
 \vspace{5mm}
 
-\href{https://ohwr.org/project/wr-cores/-/issues/101}{ohwr.org/project/wr-cores/-/issues/101}
+\href{https://gitlab.com/ohwr/project/wr-cores/-/issues/101}{gitlab.com/ohwr/project/wr-cores/-/issues/101}
