--- a/initial_research/sections/contrib.tex
+++ b/initial_research/sections/contrib.tex
@@ -5,7 +5,7 @@
 
 \vspace{5mm}
 
-\noindent In the \href{https://gitlab.com/ohwr/project/urv-core}{urv-core} repository (December 19, 2024):
+\noindent December 19, 2024 (\href{https://gitlab.com/ohwr/project/urv-core}{urv-core} repository):
 
 \begin{itemize}
 \item Three commits:
@@ -24,7 +24,7 @@
 
 \vspace{5mm}
 
-\noindent In the \href{https://gitlab.com/ohwr/project/general-cores/}{general-cores} repository (February 3, 2025):
+\noindent February 3, 2025 (\href{https://gitlab.com/ohwr/project/general-cores/}{general-cores} repository):
 
 \begin{itemize}
 \item One commit:
@@ -41,7 +41,7 @@
 
 \vspace{5mm}
 
-\noindent In the \href{https://gitlab.com/ohwr/project/wr-cores/}{wr-cores} repository (February 13, 2025):
+\noindent February 13, 2025 (\href{https://gitlab.com/ohwr/project/wr-cores/}{wr-cores} repository):
 
 \begin{itemize}
 \item One commit:
@@ -58,7 +58,7 @@
 
 \vspace{5mm}
 
-\noindent In the \href{https://gitlab.com/ohwr/project/gn4124-core/}{gn4124-core} repository (February 14, 2025):
+\noindent February 14, 2025 (\href{https://gitlab.com/ohwr/project/gn4124-core/}{gn4124-core} repository):
 
 \begin{itemize}
 \item Three commits:
@@ -74,3 +74,23 @@
 \vspace{5mm}
 
 \href{https://gitlab.com/ohwr/project/wr-cores/-/issues/101}{gitlab.com/ohwr/project/wr-cores/-/issues/101}
+
+\vspace{5mm}
+
+\noindent February 21, 2025 (\href{https://gitlab.com/ohwr/project/wr-cores/}{wr-cores} repository):
+
+\begin{itemize}
+\item Four commits:
+    \begin{itemize}
+    \item \href{https://gitlab.com/ohwr/project/wr-cores/-/commit/155d4b2747a156d858afba934389ee3fd9a87221}{155d4b2747a156d858afba934389ee3fd9a87221}
+    \item \href{https://gitlab.com/ohwr/project/wr-cores/-/commit/6a508fb414aee47b10ade02a39e14fed800dac98}{6a508fb414aee47b10ade02a39e14fed800dac98}
+    \item \href{https://gitlab.com/ohwr/project/wr-cores/-/commit/9f3c51ae51fdba309e6c5f4e315d0c306e7af033}{9f3c51ae51fdba309e6c5f4e315d0c306e7af033}
+    \item \href{https://gitlab.com/ohwr/project/wr-cores/-/commit/73ee90977adf322bfe6e37e2d5bc41385761de1e}{73ee90977adf322bfe6e37e2d5bc41385761de1e}
+    \end{itemize}
+\end{itemize}
+
+\noindent Related issue:
+
+\vspace{5mm}
+
+\href{https://gitlab.com/ohwr/project/wr-cores/-/issues/103}{gitlab.com/ohwr/project/wr-cores/-/issues/103}
