Indicate the simulation softcore

--- a/initial_research/sections/wrpc.tex
+++ b/initial_research/sections/wrpc.tex
@@ -74,7 +74,7 @@ In this context, one of the best options is \say{QuestaSim}.
 
 \subsection{WRPC Simulation}
 
-\subsubsection{WRPC v4.2 for Spartan6}
+\subsubsection{WRPC v4.2 for Spartan6 - LM32}
 \label{list-wrpc}
 
 I've successfully simulated WRPC \cite{WRPC:ohwr} in its \say{v4.2} version for \textbf{Spartan6} FPGA.
