Cite testbench flow figure

--- a/initial_research/sections/wrpc.tex
+++ b/initial_research/sections/wrpc.tex
@@ -563,7 +563,7 @@ Additionally, a special status message is shown every 50 frames received.
 
 \vspace{5mm}
 
-\noindent The following image illustrates the flow of the testbench:
+\noindent Figure \ref{fig:tb-flow} illustrates the flow of the testbench:
 
 \begin{figure}[H]
 \centering
