--- a/initial_research/sections/wrpc.tex
+++ b/initial_research/sections/wrpc.tex
@@ -31,7 +31,7 @@ It also implements the White Rabbit protocol to provide sub-nanosecond time sync
     \label{fig:WRPC}
 \end{figure}
 
-\noindent You can find the HDL description of the WRPC internal components in \cite{WRPC:modules}.
+\noindent You can find the HDL description of the WRPC internal components in \cite{WRPC:ohwr}.
 
 \subsection{\textmu RV}
 
