Add page breaks

--- a/initial_research/sections/wrpc.tex
+++ b/initial_research/sections/wrpc.tex
@@ -33,6 +33,8 @@ It also implements the White Rabbit protocol to provide sub-nanosecond time sync
 
 \noindent You can find the HDL description of the WRPC internal components in \cite{WRPC:ohwr}.
 
+\newpage
+
 \subsection{\textmu RV}
 
 The \textmu RV \cite{urv-core:ohwr} \cite{urv-core:wiki} \cite{Włostowski:2213516} (Micro RISC-V) core is a small-sized implementation of a 32-bit RISC-V core, targeted specifically at FPGAs developed by CERN. 
@@ -71,6 +73,8 @@ In this context, one of the best options is \say{QuestaSim}.
 
 \noindent \textbf{Task:} Learn how to generate a testbench using both HDLs: VHDL and Verilog.
 (Initial mixed simulation test DONE - Unfortunately questa is a proprietary software and our server image cannot be distributed, so this example cannot be shown on GitHub, it is only available in our private GitLab repository.)
+
+\newpage
 
 \subsection{WRPC Simulation}
 
