--- a/initial_research/sections/wrpc.tex
+++ b/initial_research/sections/wrpc.tex
@@ -35,7 +35,9 @@ It also implements the White Rabbit protocol to provide sub-nanosecond time sync
 
 \newpage
 
-\subsection{\textmu RV}
+\subsection{Core Parts}
+
+\subsubsection{\textmu RV}
 
 The \textmu RV \cite{urv-core:ohwr} \cite{urv-core:wiki} \cite{Włostowski:2213516} (Micro RISC-V) core is a small-sized implementation of a 32-bit RISC-V core, targeted specifically at FPGAs developed by CERN. 
 
