Add WR DRAFT reference

--- a/initial_research/bibliography.bib
+++ b/initial_research/bibliography.bib
@@ -204,3 +204,12 @@
   journal = {GitLab Group},
   howpublished = {\href{https://gitlab.com/ohwr}{https://gitlab.com/ohwr}}
 }
+
+@misc{wr-draft,
+  author = {{CERN}},
+  title = {{White Rabbit Specification: Draft for Comments}},
+  year = {2011},
+  publisher = {CERN},
+  journal = {CERN Documents},
+  howpublished = {\href{https://white-rabbit.web.cern.ch/documents/WhiteRabbitSpec.v2.0.pdf}{white-rabbit.web.cern.ch/documents/WhiteRabbitSpec.v2.0.pdf}}
+}
